[FEAT] responsive designed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body class="scroll">
     <!-- HEADER > NAVBAR -->
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img src="./assets/img/viajes.svg" alt="logo" width="50px"
